--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Landing Page</title>
 </head>
 <body>
@@ -26,7 +29,7 @@
                     
                     
                     <div class="signup">
-                        <button>Sign up</button>
+                        <button class="first-button">Sign up</button>
                     </div>                     
                     </div>        
                 </div>
@@ -58,6 +61,31 @@
             </div>
         </div>
     </div>
-    <div class="third-container"></div>
+    <div class="third-container">
+        <div class="text-container">
+            <div class="quote-thor">
+                This is an inspiring quote, or a testimonial from a customer.
+                Maybe it's just filling up space, or maybe people will actually read it.
+                Who knows? All I know is that it looks nice.
+            </div>
+            <div class="thor-box">
+                <div class="thor">-Thor, God of Thunder</div>
+            </div>
+        </div>
+    </div>
+    <div class="fourth-container">
+        <div class="blue-box">
+            <div class="header-subtext">
+                <div class="header-text">Call to action! It's time!</div>
+                <div class="sub-text">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="button-box">
+                <button class="blue-box-button">Sign up</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer-container">
+        <h4>Copyright © The Odin Project 2021</h4>
+    </div>
 </body>
 </html>
